manifests/multi-app/client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: multi-app-client
spec:
 selector:
   app: multi-app-client
 ports:
 - port: 3000
   targetPort: 3000
   protocol: TCP
