manifests/multi-app/client/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-client
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - multi-app-client.dev.nilahomar.com
      secretName: multi-app-client-tls
  rules:
  - host: multi-app-client.dev.nilahomar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: multi-app-client
            port:
              number: 3000
